k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: untrobotics
  labels:
    app.kubernetes.io/part-of: untrobotics-website
